# feature/event/src/commonMain/kotlin/dev/alxminyaev/feature/event/api/models/OutStudyEventUserTopBoardResponse.kt
@@ -1,0 +1,27 @@
+/**
+* Event service
+* Event service
+*
+* The version of the OpenAPI document: 1.0.0
+* Contact: alxminyaev@gmail.com
+*
+* NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+* https://openapi-generator.tech
+* Do not edit the class manually.
+*/
+package dev.alxminyaev.feature.event.api.models
+
+import dev.alxminyaev.feature.event.api.models.UserPlaceTopBoardResponse
+
+/**
+ * 
+ * @param userPlace 
+ * @param minBall 
+ * @param maxBall 
+ */
+data class OutStudyEventUserTopBoardResponse (
+    val userPlace: kotlin.Array<UserPlaceTopBoardResponse>,
+    val minBall: kotlin.Int,
+    val maxBall: kotlin.Int
+) 
+
