# feature/event/src/commonMain/kotlin/dev/alxminyaev/feature/event/api/models/UserPlaceTopBoardResponse.kt
@@ -1,0 +1,24 @@
+/**
+* Event service
+* Event service
+*
+* The version of the OpenAPI document: 1.0.0
+* Contact: alxminyaev@gmail.com
+*
+* NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+* https://openapi-generator.tech
+* Do not edit the class manually.
+*/
+package dev.alxminyaev.feature.event.api.models
+
+
+/**
+ * 
+ * @param user 
+ * @param place 
+ */
+data class UserPlaceTopBoardResponse (
+    val user: kotlin.Long,
+    val place: kotlin.Long
+) 
+
